[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/states/player_states/motion/PlayerStanding.gd" type="Script" id=1]
[ext_resource path="res://src/states/player_states/motion/PlayerWalking.gd" type="Script" id=2]
[ext_resource path="res://src/states/player_states/PlayerStateMachine.gd" type="Script" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]
[ext_resource path="res://src/characters/player/Player.gd" type="Script" id=5]
[ext_resource path="res://src/states/player_states/motion/PlayerDash.gd" type="Script" id=6]


[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 5 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 3 )

[node name="PlayerStanding" type="Node" parent="StateMachine"]
script = ExtResource( 1 )

[node name="PlayerWalking" type="Node" parent="StateMachine"]
script = ExtResource( 2 )

[node name="PlayerDash" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="PlayerAnimations" type="AnimationPlayer" parent="."]

[node name="CharacterAnimations" type="AnimationPlayer" parent="."]
